--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -5,3 +5,5 @@ encoding//WebContent/manager/main_teacher.jsp=UTF-8
 encoding//WebContent/student/exam.jsp=UTF-8
 encoding//WebContent/student/index.jsp=UTF-8
 encoding//WebContent/student/score.jsp=UTF-8
+encoding//WebContent/teacher/handle_add.jsp=UTF-8
+encoding//WebContent/teacher/handle_modify.jsp=UTF-8
