--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -7,3 +7,4 @@ encoding//WebContent/student/index.jsp=UTF-8
 encoding//WebContent/student/score.jsp=UTF-8
 encoding//WebContent/teacher/handle_add.jsp=UTF-8
 encoding//WebContent/teacher/handle_modify.jsp=UTF-8
+encoding//WebContent/teacher/main_review.jsp=UTF-8
